--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ humandate: "Feb 16-19, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "8:00 am - 12:00 pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-02-16      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2016-02-19        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["Josh Waterfall","Burke Squires] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Josh Waterfall","Burke Squires"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Ryan Dale"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "lisa.federer@nih.gov"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://etherpad.mozilla.org/2016-02-16-NIH        # optional (insert the URL for your Etherpad if you're using one)
