--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@ Please be sure to complete these surveys before and after the workshop.
       </p>
       <p>
         Others editors that you can use are
+        <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
         <a href="https://wiki.gnome.org/Apps/Gedit">Gedit</a>,
         <a href="http://kate-editor.org/">Kate</a> or
         <a href="http://www.sublimetext.com/">Sublime Text</a>.
@@ -525,7 +526,7 @@ Please be sure to complete these surveys before and after the workshop.
     </div>
   </div>
 </div> <!-- End of 'editor' section. -->
-
+<!--
 <div id="python"> <!-- Start of 'Python' section. Remove the third paragraph if
            the workshop will teach Python using something other than
            the IPython notebook.
@@ -612,7 +613,7 @@ Please be sure to complete these surveys before and after the workshop.
   </p>
 -->
 </div> <!-- End of 'Python' section. -->
-
+-->
 <div id="r"> <!-- Start of 'R' section. -->
   <h3>R</h3>
 
