--- a/index.html
+++ b/index.html
@@ -690,10 +690,10 @@ Please be sure to complete these surveys before and after the workshop.
       </p>
     </div>
   </div>
-
+<!--
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
-    Instructors will provide a workaround for it if needed.</strong></p>
+    Instructors will provide a workaround for it if needed.</strong></p>-->
 </div> <!-- End of 'SQLite' section. -->
 
 <!--
