--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ enddate: 2016-02-19        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Josh Waterfall","Burke Squires"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Ryan Dale"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "lisa.federer@nih.gov"      # contact email address for workshop organizer, such as "grace@hopper.org"
-etherpad: http://etherpad.mozilla.org/2016-02-16-NIH        # optional (insert the URL for your Etherpad if you're using one)
+etherpad: https://public.etherpad-mozilla.org/p/2016-02-16-NIH        # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 <!--
