--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ Please be sure to complete these surveys before and after the workshop.
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>08:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td><strong></strong>11:00</strong></td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td><strong>13:30</strong></td> <td>Coffee</td> </tr>
+      <tr> <td><strong>15:00</strong></td>  <td>Lunch break</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
