--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Please be sure to complete these surveys before and after the workshop.
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td><strong></strong>11:00</strong></td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td><strong>11:00</strong></td>  <td>Automating tasks with the Unix shell</td> </tr>
       <tr> <td><strong>13:30</strong></td> <td>Coffee</td> </tr>
       <tr> <td><strong>15:00</strong></td>  <td>Lunch break</td> </tr>
     </table>
